Fix bug with transparent buttons on mobile.

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -217,7 +217,7 @@
     box-shadow: none;
   }
 
-  .banner--desktop-transparent .button--secondary {
+  .banner .button--secondary {
     --alpha-button-background: 0;
   }
 
